# fmem

./: CMakeLists.txt
.github/workflows/: cmake-multi-platform.yml
src/: fmem-tmpfile.c
test/: CMakeLists.txt
